Implement major wallet roadmap: ZEC flow, BIP39 passphrase, multi-chain discovery, production config, RPC resilience

--- a/ios/Secrets.xcconfig.example
+++ b/ios/Secrets.xcconfig.example
@@ -5,3 +5,7 @@ REOWN_PROJECT_ID = YOUR_REOWN_PROJECT_ID
 ETHERSCAN_API_KEY = YOUR_ETHERSCAN_API_KEY
 SOCKET_API_KEY = YOUR_SOCKET_API_KEY
 ZERO_EX_API_KEY = YOUR_ZERO_EX_API_KEY
+MOONPAY_API_KEY = YOUR_MOONPAY_API_KEY
+TRANSAK_API_KEY = YOUR_TRANSAK_API_KEY
+SUPPORT_URL = https://anvilwallet.com/support
+PRIVACY_POLICY_URL = https://anvilwallet.com/privacy
